fix(coding-agent): correct extension lifecycle
- defer extension shutdown until accepted work actually settles
- preserve cancellation and fatal transform failures across hook boundaries
- retain nullable frontmatter values and accepted-path dedup semantics